Fixed text alignment of message label

--- a/src/main/webapp/app/iris/overview/exercise-chatbot/exercise-chatbot-button.component.scss
+++ b/src/main/webapp/app/iris/overview/exercise-chatbot/exercise-chatbot-button.component.scss
@@ -16,6 +16,7 @@
     right: min(80px, calc(100vw - 100%));
     display: flex;
     align-items: center;
+    text-align: left;
     gap: 0.5rem;
     padding: 0.5rem 1rem;
     border-radius: 1rem;
